# 10_homework

./: .coverage  .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: csv_excel.py  generators.py  masks.py  processing.py  search_operations.py  utils.py
tests/: test_external_api.py  test_generators.py  test_masks.py  tests_generators.py
