[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["jylu lyapunova <jylilapa@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"



[tool.poetry.group.lint.dependencies]
black = "^24.8.0"
mypy = "^1.11.2"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
